--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>vue-admin</title>
   <link rel="stylesheet" href="//unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_1783769_2t3jeqhz4g3.css">
 </head>
 <body>
   <% if(process.env.NODE_ENV == 'development'){%>
