--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>vue-admin</title>
-  <link rel="stylesheet" href="//unpkg.com/element-ui/lib/theme-chalk/index.css">
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_1783769_2t3jeqhz4g3.css">
-</head>
-<body>
-  <% if(process.env.NODE_ENV == 'development'){%>
+  <title>vue-admin-lite</title>
+  <link rel="stylesheet" href="//unpkg.com/element-ui/lib/theme-chalk/index.css" />
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_1783769_2t3jeqhz4g3.css" />
   <script src="//unpkg.com/vue@2.6.11/dist/vue.js"></script>
-  <%}else{%>
-  <script src="//unpkg.com/vue@2.6.11/dist/vue.js"></script>
-  <% } %>
   <script src="//unpkg.com/vue-router/dist/vue-router.js"></script>
   <script src="//unpkg.com/element-ui/lib/index.js"></script>
   <script src="//unpkg.com/axios/dist/axios.min.js"></script>
+</head>
+
+<body>
   <div id="app"></div>
 </body>
 </html>
